aro-content/assets/vote-app-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: vote-port
      protocol: TCP
      name: vote
  selector:
    app: azure-vote-front
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vote-route
spec:
  to:
    kind: Service
    name: azure-vote-front
